<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/medicineNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Супрадин"
        android:textSize="22sp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:id="@+id/descContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/medicineNameTxt">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medicine_description"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/medicineDescTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            tools:text="Cупрадин® содержит 12 витаминов в сочетании с минералами и редкими элементами, являющихся важными факторами метаболических процессов. Витамины необходимы для метаболизма углеводов, образования запасов энергии, метаболизма липидов, нуклеиновых кислот и белков, а также для синтеза коллагена, нейромедиаторов." />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dosageContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/descContainer"
        app:layout_constraintStart_toStartOf="@id/descContainer"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/medicine_dosage"/>

        <TextView
            android:id="@+id/medicineDosageTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            tools:text="1"/>

        <TextView
            android:id="@+id/medicineDosageSuffixTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            tools:text="штук"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dosageContainer"
        app:layout_constraintStart_toStartOf="@id/dosageContainer"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/medicine_type"/>

        <TextView
            android:id="@+id/medicineTypeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            tools:text="Таблетки"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>